--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@prisma/client": "^4.9.0",
     "framer-motion": "^8.5.0",
     "next": "13.1.2",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "@types/react": "^18.0.27",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "prisma": "^4.8.1",
     "typescript": "^4.9.4"
   }
 }
