--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@prisma/client": "^4.9.0",
+    "chakra-dayzed-datepicker": "^0.2.6",
+    "date-fns": "^2.29.3",
+    "dayzed": "^3.2.3",
     "framer-motion": "^8.5.0",
     "next": "13.1.2",
     "react": "18.2.0",
