--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^8.5.0",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-export-table-to-excel": "^1.0.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
