--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-export-table-to-excel": "^1.0.6"
+    "react-export-table-to-excel": "^1.0.6",
+    "react-hook-form": "^7.42.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
