--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.29.3",
     "dayzed": "^3.2.3",
     "framer-motion": "^8.5.0",
+    "jspdf": "^2.5.1",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
