--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "appop",
+  "discription": "a really cool app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.14.0"
+  },
   "scripts": {
     "dev": "next dev",
     "lint": "next lint",
