--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^8.5.0",
     "jspdf": "^2.5.1",
     "next": "13.1.2",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-export-table-to-excel": "^1.0.6",
