--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.1.2",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.42.1"
