--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "dayzed": "^3.2.3",
     "framer-motion": "^8.5.0",
+    "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
     "next": "13.1.2",
     "pdf-lib": "^1.17.1",
