--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "framer-motion": "^8.5.0",
     "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
+    "native-base": "^3.4.25",
     "next": "13.1.2",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-export-table-to-excel": "^1.0.6",
-    "react-hook-form": "^7.42.1"
+    "react-hook-form": "^7.42.1",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
