--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.10.5",
     "@prisma/client": "^4.9.0",
     "@react-google-maps/api": "^2.18.1",
+    "bootstrap-icons": "^1.10.3",
     "chakra-dayzed-datepicker": "^0.2.6",
     "date-fns": "^2.29.3",
     "dayzed": "^3.2.3",
