--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^8.5.0",
     "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
     "native-base": "^3.4.25",
     "next": "13.1.2",
     "pdf-lib": "^1.17.1",
