--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
+    "mysql2": "^3.3.1",
     "native-base": "^3.4.25",
+    "net": "^1.0.2",
     "next": "13.1.2",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
@@ -36,7 +38,8 @@
     "react-dom": "18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.42.1",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
